# WyattsArchiveUtils

./: README.md  axis.wam  main.py  pyproject.toml  reconstructer.py  sourcetest.wam  test.wam  writer.py
distrobution/: reconstructer.spec  writer.spec
distrobution/reconstructer/: reconstructer.py
distrobution/writer/: writer.py
reconstructer/: reconstructer.py
source_dir/: meow.py  runfile
source_dir/directory/: hello
source_dir/directory/Nested_directory_test/: multi_line_test
writer/: writer.py
